--- a/zum-assignment/package.json
+++ b/zum-assignment/package.json
@@ -7,8 +7,6 @@
     "start": "concurrently \"npm run start:client\" \"npm run start:server\"",
     "start:client": "live-server --port=3000",
     "start:server": "json-server --watch db.json --port 8080",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
   },
   "author": "줌인터넷 프론트엔드 파트",
   "license": "ISC",
@@ -25,5 +23,5 @@
     "tabWidth": 2,
     "printWidth": 100
   },
-  "homepage": "https://aldrn29.github.com/Zum-Assignment"
+  "homepage": "https://aldrn29.github.com/Zum-Assignment",
 }
